# mf-multihash.rs

./: Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md
src/: algos.rs  hashes.rs  lib.rs
tests/: hashing.txt  lib.rs
