[package]
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
description = "Implementation of the multihash format"
homepage = "https://github.com/Dignifiedquire/rust-multihash"
keywords = ["multihash", "ipfs"]
license = "MIT"
name = "multihash"
readme = "README.md"
version = "0.2.0"

[dependencies]
arrayvec = "0.3.20"
ring = "0.7.4"
tiny-keccak = "1.2.1"

[dependencies.varint]
git = "https://github.com/chpio/rust-varint.git"
optional = false
