[package]
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
description = "Implementation of the multihash format"
homepage = "https://github.com/Dignifiedquire/rust-multihash"
keywords = ["multihash", "ipfs"]
license = "MIT"
name = "multihash"
readme = "README.md"
version = "0.2.0"

[dependencies]
arrayvec = "0.4.7"
ring = "0.12.0"
tiny-keccak = "1.2.1"
integer-encoding = "1.0.0"
